<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.findfood.findfood.EditActivityFragment"
    tools:showIn="@layout/activity_edit"
    android:orientation="vertical">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:columnCount="2"
        android:rowCount="6">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/detail_category"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/edit_category"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/detail_location"/>

        <EditText
            android:id="@+id/edit_location"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="16sp"
            android:imeOptions="actionDone"/>

        <TextView
            android:text="@string/add_item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/edit_price"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/add_item_comment"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="16sp"
            android:imeOptions="actionDone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_columnSpan="2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_place"
                android:onClick="AddItemToMapClicked"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:text="hihi"
                android:textSize="18sp"
                android:id="@+id/numberchange"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="5"
            android:layout_columnSpan="2">

            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitEdit"
                android:text="OK"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </GridLayout>

</LinearLayout>
