<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.findfood.findfood.addItemActivityFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:alignmentMode="alignBounds"
        android:columnOrderPreserved="false"
        android:columnCount="2"
        android:rowCount="7">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/add_item_location"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/add_item_location"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:inputType="textCapWords"
            android:imeOptions="actionDone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/add_item_category"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/add_item_category"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/add_item_price"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/add_item_price"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/add_item_comment"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/add_item_comment"
            android:inputType="textCapWords"
            android:layout_width="0dp"
            android:layout_gravity="fill_horizontal"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:imeOptions="actionDone"/>

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">

            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/add_item_to_map"
                android:text="@string/add_item_button"
                android:onClick="AddItemToMapClicked" />

        </LinearLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_row="5"
            android:layout_columnSpan="2">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="Ok"
                android:onClick="AddItemButtonClicked"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_row="6"
            android:layout_columnSpan="2">

            <TextView
                android:id="@+id/haveget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bạn chưa chọn vị trí"
                android:layout_alignParentRight="true"
                android:textColor="@color/red"
                android:layout_gravity="right"/>

        </RelativeLayout>

    </GridLayout>

</LinearLayout>
